--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <div style="display:grid;place-items:center;height:100svh;">
+      <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+  </div>
   <script type="module" src="/src/main.tsx"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
